buildscript
{
	repositories
	{
		maven { url = 'https://maven.minecraftforge.net' }
		mavenCentral()
	}

	dependencies
	{
		classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
		classpath 'org.spongepowered:mixingradle:0.7.+'
	}
}

plugins
{
	id 'eclipse'
	id 'maven-publish'
}

apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'org.spongepowered.mixin'


version = '1.3.1'
group = 'com.mt1006.mocap'
archivesBaseName = 'Mocap-FORGE-1.16.5'

java.toolchain.languageVersion = JavaLanguageVersion.of(8)

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
minecraft
{
	mappings channel: 'official', version: '1.16.5'

	runs
	{
		client
		{
			workingDirectory project.file('run')

			property 'forge.logging.markers', 'REGISTRIES'
			property 'forge.logging.console.level', 'debug'
			property 'forge.enabledGameTestNamespaces', 'mocap'

			mods
			{
				mocap { source sourceSets.main }
			}
		}

		server
		{
			workingDirectory project.file('run')

			property 'forge.logging.markers', 'REGISTRIES'
			property 'forge.logging.console.level', 'debug'
			property 'forge.enabledGameTestNamespaces', 'mocap'

			mods
			{
				mocap { source sourceSets.main }
			}
		}
	}
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

dependencies
{
	implementation 'org.jetbrains:annotations:23.0.0'
	minecraft 'net.minecraftforge:forge:1.16.5-36.2.39'
	annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
}

mixin
{
	add sourceSets.main, 'mixins.mocap.refmap.json'
	config 'mixins.mocap.json'
}

jar
{
	manifest
	{
		attributes([
				"Specification-Title": "mocap",
				"Specification-Vendor": "mt1006",
				"Specification-Version": "${version}",
				"Implementation-Title": "mocap",
				"Implementation-Version": "${version}",
				"Implementation-Vendor": "mt1006",
				"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
				])
	}
}

jar.finalizedBy('reobfJar')

tasks.withType(JavaCompile).configureEach
{
	options.encoding = 'UTF-8'
}
